Update index.html to basic template

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Table template</title>
+    <title>Jaeha Lee - Developer's Website</title>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Hello</h1>
+    <p>Hello World</p>
   </body>
 </html>
