--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Jaeha Lee - Developer's Website</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <p>Hello World</p>
-  </body>
+
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
+
+  <meta name="author" content="Jaeha Lee">
+  <meta name="description" content="Jaeha Lee's personal website">
+  <title>Jaeha Lee | Developer's Website</title>
+
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- CSS -->
+  <link href="style.css" rel="stylesheet" type="text/css">
+
+
+</head>
+<body>
+  <header>    
+    <nav>      
+      <ul>
+        <li class="name"><a href="index.html">Jaeha Lee</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="project.html">Project</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h1>
+        Hi, I am Jaeha Lee, a Software Engineer.
+      </h1>
+      <p>
+        I am a student at The Ohio State University from Korea.<br>
+        I am passionate about technology and constantly strive to expand my knowledge and skills.
+      </p>
+    </section>
+    <section>
+      <h2>
+        About me
+      </h2>
+      <p>
+        The Ohio State University
+        Computer Science and Engineering
+      </p>
+      <p>
+        Living in Columbus Ohio / Seoul, Korea
+      </p>
+      <p>
+        Taste of Music
+      </p>
+      <p>
+        Birthday
+        2003.06.30
+      </p>
+    </section>
+
+    <section>
+      <h2>
+        Skills
+      </h2>
+      <p>
+        Front End
+      </p>
+
+      <p>
+        HTML5
+        CSS
+      </p>
+
+      <p>
+        Back End
+      </p>
+
+      <p>
+        Java
+        Python
+        C
+      </p>
+
+      <p>
+        Others
+      </p>
+
+      <p>
+        GitHub
+        Cloudflare
+        VS Code
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <i class="fa-solid fa-user"></i>
+    <p>&copy; 2024 Jaeha Lee. All rights reserved.</p>
+  </footer>
+
+</body>
+
 </html>
