--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body>
   <header>    
     <nav>      
+      <a class="logo" href="index.html">Jaeha Lee</a>
       <ul>
-        <li class="name"><a href="index.html">Jaeha Lee</a></li>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="asdf" href="index.html">Home</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="experience.html">Experience</a></li>
         <li><a href="project.html">Project</a></li>
