--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <header>    
     <nav>      
-      <a class="logo" href="index.html">Jaeha Lee</a>
+      <div class="circle"><a class="logo" href="index.html">JL</a></div>
       <ul>
         <li><a class="asdf" href="index.html">Home</a></li>
         <li><a href="education.html">Education</a></li>
