--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
 
 </head>
+
 <body>
-  <header>    
-    <nav>      
-      <div class="circle"><a class="logo" href="index.html">JL</a></div>
+  <header>
+    <nav>
+      <div class="circle" style="cursor: pointer;" onclick="window.location='index.html';"><a class="logo">JL</a></div>
       <ul>
         <li><a class="asdf" href="index.html">Home</a></li>
         <li><a href="education.html">Education</a></li>
@@ -42,32 +43,40 @@
 
   <main>
     <section class="intro">
-      <h1>
-        Hi, I am Jaeha Lee, a Software Engineer.
-      </h1>
-      <p>
-        I am a student at The Ohio State University from Korea.<br>
-        I am passionate about technology and constantly strive to expand my knowledge and skills.
-      </p>
+      <div class="headline">
+        <h1>
+          Jaeha Lee,<br>
+          A Software Engineer.
+        </h1>
+        <p>
+          Student at The Ohio State University from Korea.<br>
+          Passionate about technology and constantly strive to expand knowledge and skills.
+        </p>
+      </div>
+      <img src="image.jpg" alt="Profile picture">
     </section>
-    <section>
-      <h2>
-        About me
-      </h2>
-      <p>
-        The Ohio State University
-        Computer Science and Engineering
-      </p>
-      <p>
-        Living in Columbus Ohio / Seoul, Korea
-      </p>
-      <p>
-        Taste of Music
-      </p>
-      <p>
-        Birthday
-        2003.06.30
-      </p>
+    <section class="about_me">
+      <div class="heading">
+        <h2>
+          About me
+        </h2>
+      </div>
+      <div class="contents">
+        <p>
+          The Ohio State University
+          Computer Science and Engineering
+        </p>
+        <p>
+          Living in Columbus Ohio / Seoul, Korea
+        </p>
+        <p>
+          Taste of Music
+        </p>
+        <p>
+          Birthday
+          2003.06.30
+        </p>
+      </div>
     </section>
 
     <section>
@@ -101,6 +110,7 @@
         GitHub
         Cloudflare
         VS Code
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </p>
     </section>
   </main>
