--- a/index.html
+++ b/index.html
@@ -62,16 +62,28 @@
         </h2>
       </div>
       <div class="contents">
-        <p>
-          The Ohio State University
-          Computer Science and Engineering
-        </p>
-        <p>
-          Living in Columbus Ohio / Seoul, Korea
-        </p>
-        <p>
-          Taste of Music
-        </p>
+        <div class="school">
+          <img src="OSU_logo.svg" alt="OSU logo">
+          <p>
+            The Ohio State University<br>
+            Computer Science and Engineering<br>
+            Class of 2026
+          </p>
+        </div>
+        <div class="location">
+          <img src="flag_South_Korea.svg" alt="Flag of South Korea">
+          <p>
+            Living in<br>
+            Columbus Ohio<br>
+            Seoul, Korea
+          </p>
+        </div>
+        <div class="music">
+          <img src="Youtube_Music_icon.svg" alt="Youtube Music icon">
+          <p>
+            Taste of Music
+          </p>
+        </div>
         <p>
           Birthday
           2003.06.30
@@ -110,7 +122,6 @@
         GitHub
         Cloudflare
         VS Code
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </p>
     </section>
   </main>
