--- a/index.html
+++ b/index.html
@@ -63,31 +63,48 @@
       </div>
       <div class="contents">
         <div class="school">
-          <img src="OSU_logo.svg" alt="OSU logo">
+          <div class="container">
+            <img src="Ohio_State_University_seal.svg" alt="OSU logo">
+          </div>
           <p>
             The Ohio State University<br>
             Computer Science and Engineering<br>
             Class of 2026
           </p>
         </div>
+
         <div class="location">
-          <img src="flag_South_Korea.svg" alt="Flag of South Korea">
+          <div class="container">
+            <img src="flag_South_Korea.svg" alt="Flag of South Korea">
+          </div>
           <p>
             Living in<br>
             Columbus Ohio<br>
             Seoul, Korea
           </p>
         </div>
+
         <div class="music">
-          <img src="Youtube_Music_icon.svg" alt="Youtube Music icon">
+          <div class="container">
+            <a href="https://www.youtube.com/" target="_blank">
+              <img src="Youtube_Music_icon.svg" alt="Youtube Music icon">
+            </a>
+          </div>
           <p>
-            Taste of Music
+            Taste in Music
           </p>
         </div>
-        <p>
-          Birthday
-          2003.06.30
-        </p>
+
+        <div class="birthday">
+          <div class="container">
+            <i class="fa-regular fa-calendar"></i>
+          </div>
+          <p>
+            Birthday
+            2003.06.30
+          </p>
+        </div>
+
       </div>
     </section>
 
