--- a/index.html
+++ b/index.html
@@ -55,23 +55,24 @@
       </div>
       <img src="image.jpg" alt="Profile picture">
     </section>
+
     <section class="about_me">
       <div class="heading">
         <h2>
           About me
         </h2>
       </div>
+
       <div class="contents">
         <div class="school">
           <div class="container">
             <img src="Ohio_State_University_seal.svg" alt="OSU logo">
           </div>
           <p>
-            The Ohio State University<br>
-            Computer Science and Engineering<br>
-            Class of 2026
+            Class of 2026<br>
+            Computer Science<br>and Engineering            
           </p>
-        </div>
+        </div>        
 
         <div class="location">
           <div class="container">
@@ -91,24 +92,24 @@
             </a>
           </div>
           <p>
+            <br>
             Taste in Music
           </p>
         </div>
 
         <div class="birthday">
           <div class="container">
-            <i class="fa-regular fa-calendar"></i>
+            <img src="june-30-icon.svg" alt="Youtube Music icon">
           </div>
-          <p>
-            Birthday
-            2003.06.30
+          <p>            
+            Birthday<br>
+            June 30th, 2003
           </p>
         </div>
-
       </div>
     </section>
 
-    <section>
+    <section class="skills">
       <h2>
         Skills
       </h2>
