Connecting repository with Codespaces.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Passionate about technology and constantly strive to expand knowledge and skills.
         </p>
       </div>
-      <img src="image.jpg" alt="Profile picture">
+      <img src="assets/profile.jpg" alt="Profile picture">
     </section>
 
     <section class="about_me">
@@ -66,17 +66,17 @@
       <div class="contents">
         <div class="school">
           <div class="container">
-            <img src="Ohio_State_University_seal.svg" alt="OSU logo">
+            <img src="assets/Ohio_State_University_seal.svg" alt="OSU logo">
           </div>
           <p>
             Class of 2026<br>
-            Computer Science<br>and Engineering            
+            Computer Science<br>and Engineering
           </p>
-        </div>        
+        </div>
 
         <div class="location">
           <div class="container">
-            <img src="flag_South_Korea.svg" alt="Flag of South Korea">
+            <img src="assets/flag_South_Korea.svg" alt="Flag of South Korea">
           </div>
           <p>
             Living in<br>
@@ -88,7 +88,7 @@
         <div class="music">
           <div class="container">
             <a href="https://www.youtube.com/" target="_blank">
-              <img src="Youtube_Music_icon.svg" alt="Youtube Music icon">
+              <img src="assets/Youtube_Music_icon.svg" alt="Youtube Music icon">
             </a>
           </div>
           <p>
@@ -99,9 +99,9 @@
 
         <div class="birthday">
           <div class="container">
-            <img src="june-30-icon.svg" alt="Youtube Music icon">
+            <img src="assets/june-30-icon.svg" alt="Youtube Music icon">
           </div>
-          <p>            
+          <p>
             Birthday<br>
             June 30th, 2003
           </p>
@@ -113,34 +113,36 @@
       <h2>
         Skills
       </h2>
-      <p>
-        Front End
-      </p>
+      <div class="front_end">
+        <p>
+          Front End
+        </p>
+        <img src="assets/HTML_logo.svg" alt="HTML">
+        <img src="assets/Javascript_logo.svg" alt="Javascript">
+        <img src="assets/CSS_logo.svg" alt="CSS">
+      </div>
 
-      <p>
-        HTML5
-        CSS
-      </p>
+      <div class="back_end">
+        <p>
+          Back End
+        </p>
+        <img src="assets/Java_logo.svg" alt="Java">
+        <img src="assets/Python_logo.svg" alt="Python">
+        <img src="assets/C_logo.svg" alt="C">
+      </div>
 
-      <p>
-        Back End
-      </p>
+      <div class="others">
+        <p>
+          GitHub
+          Cloudflare
+          VS Code
+        </p>
+        <img src="assets/GitHub_logo.svg" alt="GitHub">
+        <img src="assets/GitHub_mark.png" alt="GitHub_mark">
+        <img src="assets/VSCode_logo.svg" alt="Visual Studio Code">
+        <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
+      </div>
 
-      <p>
-        Java
-        Python
-        C
-      </p>
-
-      <p>
-        Others
-      </p>
-
-      <p>
-        GitHub
-        Cloudflare
-        VS Code
-      </p>
     </section>
   </main>
 
