--- a/index.html
+++ b/index.html
@@ -109,41 +109,97 @@
       </div>
     </section>
 
+    <!-- <section class="skills">
+      <div class="heading">
+        <h2>
+          Skills
+        </h2>
+      </div>
+
+      <div class="contents">
+        <div class="front_end">
+          <p>
+            Front End
+          </p>
+          <div class="front_end_images">
+            <img src="assets/html-1.svg" alt="HTML">
+            <img src="assets/css-3.svg" alt="CSS">
+            <img src="assets/javascript-1.svg" alt="Javascript">
+          </div>
+        </div>
+
+        <div class="back_end">
+          <p>
+            Back End
+          </p>
+          <div class="back_end_images">
+            <img src="assets/Java_logo.svg" alt="Java">
+            <img src="python-logo-only.svg" alt="Python">
+            <img src="assets/C_logo.svg" alt="C">
+          </div>
+        </div>
+
+
+        <div class="others">
+          <p>
+            Others
+          </p>
+          <div class="others_images">
+            <img src="assets/GitHub_logo.svg" alt="GitHub">
+            <img src="assets/VSCode_logo.svg" alt="Visual Studio Code">
+            <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
+          </div>
+        </div>
+      </div>
+    </section> -->
+
     <section class="skills">
-      <h2>
-        Skills
-      </h2>
-      <div class="front_end">
-        <p>
-          Front End
-        </p>
-        <img src="assets/HTML_logo.svg" alt="HTML">
-        <img src="assets/Javascript_logo.svg" alt="Javascript">
-        <img src="assets/CSS_logo.svg" alt="CSS">
+      <div class="heading">
+        <h2>
+          Skills
+        </h2>
       </div>
 
-      <div class="back_end">
-        <p>
-          Back End
-        </p>
-        <img src="assets/Java_logo.svg" alt="Java">
-        <img src="assets/Python_logo.svg" alt="Python">
-        <img src="assets/C_logo.svg" alt="C">
+      <div class="contents">
+        <div>
+          <img src="assets/Java_logo.svg" alt="Java">
+          <span>Java</span>
+        </div>
+        <div>
+          <img src="python-logo-only.svg" alt="Python">
+          <span>Python</span>
+        </div>
+        <div>
+          <img src="assets/C_logo.svg" alt="C">
+          <span>C</span>
+        </div>
+        <div>
+          <img src="assets/html-1.svg" alt="HTML">
+          <span>HTML</span>
+        </div>
+        <div>
+          <img src="assets/css-3.svg" alt="CSS">
+          <span>CSS</span>
+        </div>
+        <div>
+          <img src="assets/javascript-1.svg" alt="Javascript">
+          <span>Javascript</span>
+        </div>        
+        <div>
+          <img src="assets/GitHub_logo.svg" alt="GitHub">
+          <span>GitHub</span>
+        </div>
+        <div>
+          <img src="assets/VSCode_logo.svg" alt="Visual Studio Code">
+          <span>VSCode</span>
+        </div>
+        <div>
+          <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
+          <span>Cloudflare</span>
+        </div>
       </div>
-
-      <div class="others">
-        <p>
-          GitHub
-          Cloudflare
-          VS Code
-        </p>
-        <img src="assets/GitHub_logo.svg" alt="GitHub">
-        <img src="assets/GitHub_mark.png" alt="GitHub_mark">
-        <img src="assets/VSCode_logo.svg" alt="Visual Studio Code">
-        <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
-      </div>
-
     </section>
+
   </main>
 
   <footer>
