--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div class="circle" style="cursor: pointer;" onclick="window.location='index.html';"><a class="logo">JL</a></div>
       <ul>
         <li><a class="asdf" href="index.html">Home</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="project.html">Project</a></li>
+        <li><a href="education.html">About Me</a></li>
+        <li><a href="experience.html">Skills</a></li>
+        <li><a href="project.html">Education</a></li>
+        <li><a href="project.html">Experience</a></li>
       </ul>
     </nav>
   </header>
@@ -68,21 +69,21 @@
           <div class="container">
             <img src="assets/Ohio_State_University_seal.svg" alt="OSU logo">
           </div>
-          <p>
+          <span>
             Class of 2026<br>
             Computer Science<br>and Engineering
-          </p>
+          </span>
         </div>
 
         <div class="location">
           <div class="container">
             <img src="assets/flag_South_Korea.svg" alt="Flag of South Korea">
           </div>
-          <p>
+          <span>
             Living in<br>
             Columbus Ohio<br>
             Seoul, Korea
-          </p>
+          </span>
         </div>
 
         <div class="music">
@@ -91,67 +92,23 @@
               <img src="assets/Youtube_Music_icon.svg" alt="Youtube Music icon">
             </a>
           </div>
-          <p>
+          <span>
             <br>
             Taste in Music
-          </p>
+          </span>
         </div>
 
         <div class="birthday">
           <div class="container">
             <img src="assets/june-30-icon.svg" alt="Youtube Music icon">
           </div>
-          <p>
+          <span>
             Birthday<br>
             June 30th, 2003
-          </p>
+          </span>
         </div>
       </div>
     </section>
-
-    <!-- <section class="skills">
-      <div class="heading">
-        <h2>
-          Skills
-        </h2>
-      </div>
-
-      <div class="contents">
-        <div class="front_end">
-          <p>
-            Front End
-          </p>
-          <div class="front_end_images">
-            <img src="assets/html-1.svg" alt="HTML">
-            <img src="assets/css-3.svg" alt="CSS">
-            <img src="assets/javascript-1.svg" alt="Javascript">
-          </div>
-        </div>
-
-        <div class="back_end">
-          <p>
-            Back End
-          </p>
-          <div class="back_end_images">
-            <img src="assets/Java_logo.svg" alt="Java">
-            <img src="python-logo-only.svg" alt="Python">
-            <img src="assets/C_logo.svg" alt="C">
-          </div>
-        </div>
-
-
-        <div class="others">
-          <p>
-            Others
-          </p>
-          <div class="others_images">
-            <img src="assets/GitHub_logo.svg" alt="GitHub">
-            <img src="assets/VSCode_logo.svg" alt="Visual Studio Code">
-            <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="skills">
       <div class="heading">
@@ -162,7 +119,7 @@
 
       <div class="contents">
         <div>
-          <img src="assets/Java_logo.svg" alt="Java">
+          <img src="assets/java-14.svg" alt="Java">
           <span>Java</span>
         </div>
         <div>
@@ -184,9 +141,9 @@
         <div>
           <img src="assets/javascript-1.svg" alt="Javascript">
           <span>Javascript</span>
-        </div>        
+        </div>
         <div>
-          <img src="assets/GitHub_logo.svg" alt="GitHub">
+          <img src="assets/GitHub_mark_white.png" alt="GitHub">
           <span>GitHub</span>
         </div>
         <div>
@@ -194,9 +151,64 @@
           <span>VSCode</span>
         </div>
         <div>
-          <img src="assets/Cloudflare_logo.jpg" alt="Cloudflare">
+          <img src="assets/Cloudflare_Logo.png" alt="Cloudflare">
           <span>Cloudflare</span>
         </div>
+      </div>
+    </section>
+
+    <section class="education">
+      <h2>
+        Education
+      </h2>
+      <p>
+        The Ohio State University
+        Bachelor of Science - Computer Science and Engineering
+        Class of 2026
+        Completed 82 out of 126 credit hours
+        GPA: 3.425/4.0
+      </p>
+
+      <h3>
+        Awards
+      </h3>
+
+      <p>
+        Dean's List
+        AI Club Challenge - 2nd Place
+      </p>
+    </section>
+
+    <section class="experience">
+      <h2>
+        Experience
+      </h2>
+
+      <div>
+        Sergeant
+        Republic of Korea Army
+        Sep 2023 - March 2025 · 1.5 yr
+        South Korea
+        Disciplined and trained as a Military Engineer at the front line.
+        Learned and executed responsibilities as a Duty Officer and Squad Leader.
+        Trained in firing weapons and handling mines.
+      </div>
+
+      <div>
+        Classroom and DU Support Student Tech
+        The Ohio State University
+
+        Jan 2023 - Apr 2023 · 4 mos
+        Provided technical support in classroom and digital settings.
+        Assisted in troubleshooting and resolving technical issues.
+        Contributed to the implementation of technology and digital solutions.
+      </div>
+      <div>
+        Cashier
+        Oct 2022 - Dec 2022 · 3 mos
+        Handled cash transactions and provided excellent customer service.
+        Operated the cash register and processed payments accurately.
+        Assisted in restocking and maintaining a clean checkout area.
       </div>
     </section>
 
