--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <span>Java</span>
         </div>
         <div>
-          <img src="python-logo-only.svg" alt="Python">
+          <img src="assets/python-logo-only.svg" alt="Python">
           <span>Python</span>
         </div>
         <div>
@@ -158,57 +158,74 @@
     </section>
 
     <section class="education">
-      <h2>
-        Education
-      </h2>
-      <p>
-        The Ohio State University
-        Bachelor of Science - Computer Science and Engineering
-        Class of 2026
-        Completed 82 out of 126 credit hours
-        GPA: 3.425/4.0
-      </p>
+      <div class="heading">
+        <h2>
+          Education
+        </h2>
+      </div>
 
-      <h3>
-        Awards
-      </h3>
-
-      <p>
-        Dean's List
-        AI Club Challenge - 2nd Place
-      </p>
+      <div class="contents">
+        <div class="school">
+          <div class="container">
+            <img src="The_Ohio_State_University_Logo.jpg" alt="OSU">
+          </div>
+          <div class="explanation">
+            <span class="degree">
+              Bachelor of Science<br>
+              Computer Science and Engineering<br>
+            </span>
+            <span class="additional_explanation">
+              <br>Class of 2026<br>
+              GPA: 3.425/4.0<br><br>
+              Dean's List - Spring 2023<br>
+              AI Club Challenge - 2nd Place
+            </span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="experience">
-      <h2>
-        Experience
-      </h2>
-
-      <div>
-        Sergeant
-        Republic of Korea Army
-        Sep 2023 - March 2025 · 1.5 yr
-        South Korea
-        Disciplined and trained as a Military Engineer at the front line.
-        Learned and executed responsibilities as a Duty Officer and Squad Leader.
-        Trained in firing weapons and handling mines.
+      <div class="heading">
+        <h2>
+          Experience
+        </h2>
       </div>
+      <div class="contents">
+        <div class="company">
+          <div class="container army">
+            <img src="ohio_state_buckeyes_logo_secondary_19752595.png" alt="OSU">
+          </div>
+          <span>
+            Republic of Korea Army
+          </span>
+        </div>
+        <div>
+          Sergeant
+          Republic of Korea Army
+          Sep 2023 - March 2025 · 1.5 yr
+          South Korea
+          Disciplined and trained as a Military Engineer at the front line.<br>
+          Learned and executed responsibilities as a Duty Officer and Squad Leader.<br>
+          Trained in firing weapons and handling mines.
+        </div>
 
-      <div>
-        Classroom and DU Support Student Tech
-        The Ohio State University
+        <div>
+          Classroom and DU Support Student Tech
+          The Ohio State University
 
-        Jan 2023 - Apr 2023 · 4 mos
-        Provided technical support in classroom and digital settings.
-        Assisted in troubleshooting and resolving technical issues.
-        Contributed to the implementation of technology and digital solutions.
-      </div>
-      <div>
-        Cashier
-        Oct 2022 - Dec 2022 · 3 mos
-        Handled cash transactions and provided excellent customer service.
-        Operated the cash register and processed payments accurately.
-        Assisted in restocking and maintaining a clean checkout area.
+          Jan 2023 - Apr 2023 · 4 mos
+          Provided technical support in classroom and digital settings.<br>
+          Assisted in troubleshooting and resolving technical issues.<br>
+          Contributed to the implementation of technology and digital solutions.
+        </div>
+        <div>
+          Cashier
+          Oct 2022 - Dec 2022 · 3 mos
+          Handled cash transactions and provided excellent customer service.<br>
+          Operated the cash register and processed payments accurately.<br>
+          Assisted in restocking and maintaining a clean checkout area.
+        </div>
       </div>
     </section>
 
