--- a/index.html
+++ b/index.html
@@ -186,46 +186,60 @@
     </section>
 
     <section class="experience">
+
       <div class="heading">
         <h2>
           Experience
         </h2>
       </div>
+
       <div class="contents">
-        <div class="company">
-          <div class="container army">
+
+        <div class="job">
+          <div class="container">
+            <img src="mark01.png" class="army" alt="OSU">
+          </div>
+          <div class="description">
+            <h3 class="title">Sergeant</h3>
+            <span class="workplace">Republic of Korea Army<br></span>
+            <span class="period">Sep 2023 ~ Mar 2025</span>
+            <p>
+              Disciplined and trained as a Military Engineer at the front line.<br>
+              Learned and executed responsibilities as a Duty Officer and Squad Leader.<br>
+              Trained in firing weapons and handling mines.
+            </p>
+          </div>
+        </div>
+
+        <div class="job">
+          <div class="container">
             <img src="ohio_state_buckeyes_logo_secondary_19752595.png" alt="OSU">
           </div>
-          <span>
-            Republic of Korea Army
-          </span>
-        </div>
-        <div>
-          Sergeant
-          Republic of Korea Army
-          Sep 2023 - March 2025 · 1.5 yr
-          South Korea
-          Disciplined and trained as a Military Engineer at the front line.<br>
-          Learned and executed responsibilities as a Duty Officer and Squad Leader.<br>
-          Trained in firing weapons and handling mines.
+          <div class="description">
+            
+            <h3 class="title">Classroom and DU Support Student Tech</h3>
+            <span class="workplace">The Ohio State University<br></span>
+            <span class="period">Jan 2023 ~ Apr 2023</span>
+            <p>
+              Provided technical support in classroom and digital settings.<br>
+              Assisted in troubleshooting and resolving technical issues.<br>
+              Contributed to the implementation of technology and digital solutions.
+            </p>
+
+            <h3 class="title">Cashier</h3>
+            <span class="workplace">The Ohio State University<br></span>
+            <span class="period">Oct 2022 ~ Dec 2022</span>
+            <p>
+              Handled cash transactions and provided excellent customer service.<br>
+              Operated the cash register and processed payments accurately.<br>
+              Assisted in restocking and maintaining a clean checkout area.
+            </p>
+
+          </div>
         </div>
 
-        <div>
-          Classroom and DU Support Student Tech
-          The Ohio State University
 
-          Jan 2023 - Apr 2023 · 4 mos
-          Provided technical support in classroom and digital settings.<br>
-          Assisted in troubleshooting and resolving technical issues.<br>
-          Contributed to the implementation of technology and digital solutions.
-        </div>
-        <div>
-          Cashier
-          Oct 2022 - Dec 2022 · 3 mos
-          Handled cash transactions and provided excellent customer service.<br>
-          Operated the cash register and processed payments accurately.<br>
-          Assisted in restocking and maintaining a clean checkout area.
-        </div>
+
       </div>
     </section>
 
