--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <section class="intro">
-      <div class="headline">
+      <div class="headline">        
         <h1>
           Jaeha Lee,<br>
           A Software Engineer.
@@ -170,16 +170,16 @@
             <img src="The_Ohio_State_University_Logo.jpg" alt="OSU">
           </div>
           <div class="explanation">
-            <span class="degree">
+            <p class="degree">
               Bachelor of Science<br>
-              Computer Science and Engineering<br>
-            </span>
-            <span class="additional_explanation">
-              <br>Class of 2026<br>
-              GPA: 3.425/4.0<br><br>
+              Computer Science and Engineering
+            </p>
+            <p class="additional_explanation">
+              Class of 2026<br>
+              GPA: 3.425/4.0<br>
               Dean's List - Spring 2023<br>
               AI Club Challenge - 2nd Place
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -194,47 +194,45 @@
       </div>
 
       <div class="contents">
-
         <div class="job">
           <div class="container">
             <img src="mark01.png" class="army" alt="OSU">
           </div>
-          <div class="description">
+          <div class="description army">
             <h3 class="title">Sergeant</h3>
-            <span class="workplace">Republic of Korea Army<br></span>
-            <span class="period">Sep 2023 ~ Mar 2025</span>
-            <p>
-              Disciplined and trained as a Military Engineer at the front line.<br>
-              Learned and executed responsibilities as a Duty Officer and Squad Leader.<br>
-              Trained in firing weapons and handling mines.
-            </p>
+            <span class="workplace">Republic of Korea Army / Sep 2023 ~ Mar 2025</span>
+            <ul>
+              <li>Disciplined and trained as a Military Engineer at the front line.</li>
+              <li>Learned and executed responsibilities as a Duty Officer and Squad Leader.</li>
+              <li>Trained in firing weapons and handling mines.</li>
+            </ul>
           </div>
         </div>
 
         <div class="job">
           <div class="container">
-            <img src="ohio_state_buckeyes_logo_secondary_19752595.png" alt="OSU">
+            <img src="ohio_state_buckeyes_logo_secondary_19752595.png" class="osu" alt="OSU">
           </div>
           <div class="description">
-            
-            <h3 class="title">Classroom and DU Support Student Tech</h3>
-            <span class="workplace">The Ohio State University<br></span>
-            <span class="period">Jan 2023 ~ Apr 2023</span>
-            <p>
-              Provided technical support in classroom and digital settings.<br>
-              Assisted in troubleshooting and resolving technical issues.<br>
-              Contributed to the implementation of technology and digital solutions.
-            </p>
+            <div>
+              <h3 class="title">Classroom and DU Support Student Tech</h3>
+              <span class="workplace">The Ohio State University / Jan 2023 ~ Apr 2023<br></span>
+              <ul>
+                <li>Provided technical support in classroom and digital settings.</li>
+                <li>Assisted in troubleshooting and resolving technical issues.</li>
+                <li>Contributed to the implementation of technology and digital solutions.</li>
+              </ul>
+            </div>
 
-            <h3 class="title">Cashier</h3>
-            <span class="workplace">The Ohio State University<br></span>
-            <span class="period">Oct 2022 ~ Dec 2022</span>
-            <p>
-              Handled cash transactions and provided excellent customer service.<br>
-              Operated the cash register and processed payments accurately.<br>
-              Assisted in restocking and maintaining a clean checkout area.
-            </p>
-
+            <div>
+              <h3 class="title">Cashier</h3>
+              <span class="workplace">The Ohio State University / Oct 2022 ~ Dec 2022</span>
+              <ul>
+                <li>Handled cash transactions and provided excellent customer service.</li>
+                <li>Operated the cash register and processed payments accurately.</li>
+                <li>Assisted in restocking and maintaining a clean checkout area.</li>
+              </ul>
+            </div>
           </div>
         </div>
 
