--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <section class="intro">
-      <div class="headline">        
+      <div class="headline">
         <h1>
           Jaeha Lee,<br>
           A Software Engineer.
@@ -244,8 +244,17 @@
   </main>
 
   <footer>
-    <i class="fa-solid fa-user"></i>
+    <div>
+      <a href="https://www.linkedin.com/in/jaehalee7939/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/jaeha_7939/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://github.com/dlwogk7939" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a href="https://leetcode.com/u/dlwogk7939/" target="_blank"><img src="leetcode-svgrepo-com.svg"></img></a>
+      <a href="https://docs.google.com/document/d/1bw7EaW2boEXv89vO4m7vZ2c8mVB5kPMQxHvLJe80NpQ/edit" target="_blank"><i
+          class="fa-regular fa-file"></i></a>
+      <a href="mailto:dlwogk121@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+    </div>
     <p>&copy; 2024 Jaeha Lee. All rights reserved.</p>
+
   </footer>
 
 </body>
